package moorhensession;
syntax = "proto3";

message CootBondOptions {
  float smoothness = 1;
  float width = 2;
  float atomRadiusBondRatio = 3;
  bool showAniso = 4;
  bool showOrtep = 5;
  bool showHs = 6;
}

message M2tParameters {
  float ribbonStyleCoilThickness = 1;
  float ribbonStyleHelixWidth = 2;
  float ribbonStyleStrandWidth = 3;
  float ribbonStyleArrowWidth = 4;
  float ribbonStyleDNARNAWidth = 5;
  int32 ribbonStyleAxialSampling = 6;
  int32 cylindersStyleAngularSampling = 7;
  float cylindersStyleCylinderRadius = 8;
  float cylindersStyleBallRadius = 9;
  float surfaceStyleProbeRadius = 10;
  float ballsStyleRadiusMultiplier = 11;
  string nucleotideRibbonStyle = 12;
  int32 dishStyleAngularSampling = 13;
  int32 ssUsageScheme = 14;
}

message residueEnvironmentOptions {
  int32 maxDist = 1;
  string backgroundRepresentation = 2;
  string focusRepresentation = 3;
  bool labelled = 4;
  bool showHBonds = 5;
  bool showContacts = 6;
}

message ColourRuleObject {
  string cid = 1;
  string color = 2;
  bool applyColourToNonCarbonAtoms = 3;
  bool isMultiColourRule = 4;
  string ruleType = 5;
  repeated string args = 6;
  string label = 7;
  string uniqueId = 8;
  int32 parentMoleculeMolNo = 9;
  string parentRepresentationUniqueId = 10;
}

message SelectedMtzColumns {
  string F = 1;
  string PHI = 2;
  optional string Fobs = 3;
  optional string SigFobs = 4;
  optional string FreeR = 5;
  optional bool isDifference = 6;
  optional bool useWeight = 7;
  optional bool calcStructFact = 8;
}

message Representation {
    string cid = 1;
    string style = 2;
    bool isCustom = 3;
    repeated ColourRuleObject colourRules = 4;
    CootBondOptions bondOptions = 5;
    M2tParameters m2tParams = 6;
    residueEnvironmentOptions resEnvOptions = 7;
}

message MoleculeSessionData {
  string name = 1;
  int32 molNo = 2;
  string coordString = 3;
  repeated Representation representations = 4;
  CootBondOptions defaultBondOptions = 5;
  repeated ColourRuleObject defaultColourRules = 6;
  repeated int32 connectedToMaps = 7;
  map<string, string> ligandDicts = 8;
  M2tParameters defaultM2tParams = 9;
  bool symmetryOn = 10;
  bool biomolOn = 11;
  float symmetryRadius = 12;
  residueEnvironmentOptions defaultResEnvOptions = 13;
  string uniqueId = 14;
}

message MapDataSession {
  string name = 1;
  int32 molNo = 2;
  string uniqueId = 3;
  bytes mapData = 4;
  bytes reflectionData = 5;
  bool showOnLoad = 6;
  float contourLevel = 7;
  float radius = 8;
  MapRgba rgba = 9;
  string style = 10;
  bool isDifference = 11;
  SelectedMtzColumns selectedColumns = 12;
  bool hasReflectionData = 13;
  string associatedReflectionFileName = 14;
}

message MapRgba {
  MapColour mapColour = 1;
  MapColour positiveDiffColour = 2;
  MapColour negativeDiffColour = 3;
  float a = 4;
}

message MapColour {
  int32 r = 1;
  int32 g = 2;
  int32 b = 3;
}

message PathElement {
  repeated float v = 1;
}

message GradientStop {
  float stop = 1;
  string colour = 2;
}

message MoorhenOverlay2DFracPath {
  repeated PathElement path = 1;
  optional string fillStyle = 2;
  optional string strokeStyle = 3;
  optional string drawStyle = 4;
  repeated float gradientBoundary = 5;
  repeated GradientStop gradientStops = 6;
  optional float lineWidth = 7;
  string uniqueId = 8;
}

message MoorhenOverlay2DSvgPath {
  string path = 1;
  optional string fillStyle = 2;
  optional string strokeStyle = 3;
  optional string drawStyle = 4;
  repeated float gradientBoundary = 5;
  repeated GradientStop gradientStops = 6;
  optional float lineWidth = 7;
  string uniqueId = 8;
}

message MoorhenOverlay2DTextFrac {
  float x = 1;
  float y = 2;
  string text = 3;
  string fontFamily = 4;
  string fontPixelSize = 5;
  optional string fillStyle = 6;
  optional string strokeStyle = 7;
  optional string drawStyle = 8;
  string uniqueId = 9;
}

message MoorhenOverlay2DLatexSrcFrac {
  float x = 1;
  float y = 2;
  float height = 3;
  string text = 4;
  string uniqueId = 5;
}

message MoorhenOverlay2DImageSrcFrac {
  float x = 1;
  float y = 2;
  float width = 3;
  float height = 4;
  string src = 5;
  string uniqueId = 6;
}

message Overlay2DSessionData {
  repeated MoorhenOverlay2DFracPath fracPath2D = 1;
  repeated MoorhenOverlay2DSvgPath svgPath2D = 2;
  repeated MoorhenOverlay2DTextFrac textFracPath2D = 3;
  repeated MoorhenOverlay2DLatexSrcFrac latexFracPath2D = 4;
  repeated MoorhenOverlay2DImageSrcFrac imageFracPath2D = 5;
}

message RGB {
  float r = 1;
  float g = 2;
  float b = 3;
}

message MoorhenVector {
  string coordsMode = 1;
  string labelMode = 2;
  string labelText = 3;
  string drawMode = 4;
  string arrowMode = 5;
  float xFrom = 6;
  float yFrom = 7;
  float zFrom = 8;
  float xTo = 9;
  float yTo = 10;
  float zTo = 11;
  string cidFrom = 12;
  string cidTo = 13;
  float molNoFrom = 14;
  float molNoTo = 15;
  string uniqueId = 16;
  RGB vectorColour = 17;
  RGB textColour = 18;
}

message ViewDataSession {
  repeated float origin = 1;
  repeated float backgroundColor = 2;
  repeated float ambientLight = 3;
  repeated float diffuseLight = 4;
  repeated float lightPosition = 5;
  repeated float specularLight = 6;
  float specularPower = 7;
  float fogStart = 8;
  float fogEnd = 9;
  float zoom = 10;
  bool doDrawClickedAtomLines = 11;
  float clipStart = 12;
  float clipEnd = 13;
  repeated float quat4 = 14;
  bool shadows = 15;
  Ssao ssao = 16;
  EdgeDetection edgeDetection = 17;
  Blur blur = 18;
  bool doPerspectiveProjection = 19;
}

message Ssao {
  bool enabled = 1;
  float radius = 2;
  float bias = 3;
}

message EdgeDetection {
  bool enabled = 1;
  float depthScale = 2;
  float normalScale = 3;
  float depthThreshold = 4;
  float normalThreshold = 5;
}

message Blur {
  bool enabled = 1;
  float depth = 2;
  float radius = 3;
}

message Session {
  string version = 1;
  bool includesAdditionalMapData = 2;
  repeated MoleculeSessionData moleculeData = 3;
  repeated MapDataSession mapData = 4;
  ViewDataSession viewData = 5;
  int32 activeMapIndex = 6;
  bool dataIsEmbedded = 7;
  optional Overlay2DSessionData overlay2dData = 8;
  repeated MoorhenVector vectorData = 9;
}
